--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -14,8 +14,19 @@ supported_commands_by_ecu:
   "714":
   - 714.77E.221014|fc=1:VOLKSWAGEN_AAT
   "746":
+  - 746.7B0.222603|fc=1:VOLKSWAGEN_A_C_CMPR_SPEED
+  - 746.7B0.222605|fc=1:VOLKSWAGEN_REFRIG_P
   - 746.7B0.222606|fc=1:VOLKSWAGEN_HVAC_FAN1_ACT,VOLKSWAGEN_HVAC_FAN2_ACT
+  - 746.7B0.22260A|fc=1:VOLKSWAGEN_AAT_CABIN
+  - 746.7B0.22260C|fc=1:VOLKSWAGEN_FRONT_LEFT_DEFL_T
+  - 746.7B0.22260D|fc=1:VOLKSWAGEN_FRONT_RIGHT_DEFL_T
   - 746.7B0.222613|fc=1:VOLKSWAGEN_HVAC_IAT
+  - 746.7B0.22261E|fc=1:VOLKSWAGEN_RECIRC_FLAP_ACT_PCT,VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS
+  - 746.7B0.22261F|fc=1:VOLKSWAGEN_RECIRC_FLAP_CMD_STEPS
+  - 746.7B0.222620|fc=1:VOLKSWAGEN_RECIRC_FLAP_STOP_FRESH
+  - 746.7B0.222621|fc=1:VOLKSWAGEN_RECIRC_FLAP_STOP_RECIRC
+  - 746.7B0.222622|fc=1:VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACT
+  - 746.7B0.222626|fc=1:VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACT
   - 746.7B0.2226ED|fc=1:VOLKSWAGEN_AIR_POLUTION
   "767":
   - 767.7D1.222431|fc=1:VOLKSWAGEN_GPS_SATS_TRACKED,VOLKSWAGEN_GPS_SATS_VISIBLE
@@ -163,7 +174,10 @@ unsupported_commands_by_ecu:
   - 742.7AC.2227D6|fc=1:VOLKSWAGEN_PTC_PUMP_PWR,VOLKSWAGEN_PTC_PUMP_RPM
   - 742.7AC.22475F|fc=1:VOLKSWAGEN_PTC_HTR_FLUID_T1,VOLKSWAGEN_PTC_HTR_FLUID_T2,VOLKSWAGEN_PTC_HTR_I
   "744":
+  - 744.7AE.22103D|fc=1:VOLKSWAGEN_OBC_HVDC_C
+  - 744.7AE.22103E|fc=1:VOLKSWAGEN_OBC_CYCLE_ENERGY
   - 744.7AE.221507|fc=1:VOLKSWAGEN_CHRGR_RAIL1_E,VOLKSWAGEN_CHRGR_RAIL2_E,VOLKSWAGEN_CHRGR_RAIL3_E
+  - 744.7AE.221525|fc=1:VOLKSWAGEN_OBC_V_PROX_A
   - 744.7AE.221529|fc=1,din=03:VOLKSWAGEN_CHRGR_PRX_V_CONN_B
   - 744.7AE.221553|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_HI_I
   - 744.7AE.221554|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_HI_V
@@ -181,15 +195,21 @@ unsupported_commands_by_ecu:
   - 744.7AE.221DA7|fc=1:VOLKSWAGEN_CHRGR_V_OUT,VOLKSWAGEN_OBC_HIGH_V_OUTPUT
   - 744.7AE.221DD0|fc=1,din=03:VOLKSWAGEN_CHRGR_SOC_DISP
   - 744.7AE.221DD3|fc=1,din=03:VOLKSWAGEN_CHRGR_CHG_PWR_MAX
+  - 744.7AE.221DDA|fc=1:VOLKSWAGEN_OBC_T_A
   - 744.7AE.224965|fc=1:VOLKSWAGEN_HVBAT_KWH_V2
   - 744.7AE.22F45B|fc=1,din=03:VOLKSWAGEN_CHRGR_SOC_2
   "746":
   - 746.2227C4|fc=1:VOLKSWAGEN_HVAC_INSIDE_HUM,VOLKSWAGEN_WNDSHLD_TEMP
+  - 746.7B0.220800|fc=1:VOLKSWAGEN_AC_COMPRESSOR_PWR_ACT
   - 746.7B0.222604|fc=1:VOLKSWAGEN_HVAC_AC_LOAD
   - 746.7B0.222607|fc=1:VOLKSWAGEN_HVAC_FAN_CMD
   - 746.7B0.222609|fc=1:VOLKSWAGEN_HVAC_AAT
   - 746.7B0.222612|fc=1:VOLKSWAGEN_HVAC_EVAP_T
+  - 746.7B0.22263D|fc=1:VOLKSWAGEN_REAR_DEFL_T
   - 746.7B0.2227C3|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_HUM
+  - 746.7B0.2242DB|fc=1:VOLKSWAGEN_CO2_CONTENT_INTERIOR
+  - 746.7B0.224EEF|fc=1:VOLKSWAGEN_AC_REFRIG_P_SENS1,VOLKSWAGEN_AC_REFRIG_T_SENS1,VOLKSWAGEN_AC_REFRIG_T_SENS1_INT
+  - 746.7B0.22F449|fc=1:VOLKSWAGEN_APP_D
   "7E0":
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
   - 7E0.22295A:VOLKSWAGEN_ODO_2_V2,VOLKSWAGEN_ODO_V2
@@ -335,3 +355,215 @@ unsupported_commands_by_ecu:
   - 7E5.7ED.22F45B|din=03:VOLKSWAGEN_BMS_SOC_HIRES
   "FC00":
   - FC00.22028C:VOLKSWAGEN_SOC_V2
+  - FC00.FE0076.220335|ta=76,c=17:VOLKSWAGEN_MOTOR_TRQ_FRONT
+  - FC00.FE0076.22033B|ta=76,c=17:VOLKSWAGEN_MOTOR_TRQ_REAR
+  - FC00.FE0076.220343|ta=76,c=17:VOLKSWAGEN_MOTOR_TRQ_DIFF
+  - FC00.FE0076.220344|ta=76,c=17:VOLKSWAGEN_MOTOR_TRQ_RATED_FRONT,VOLKSWAGEN_MOTOR_TRQ_RATED_REAR
+  - FC00.FE0076.220346|ta=76,c=17:VOLKSWAGEN_STEER_ANGLE
+  - FC00.FE0076.22035E|ta=76,c=17:VOLKSWAGEN_HVBAT_I_ENG
+  - FC00.FE0076.220360|ta=76,c=17:VOLKSWAGEN_HVAUX_I
+  - FC00.FE0076.220364|ta=76,c=17:VOLKSWAGEN_HVAUX_PWR
+  - FC00.FE0076.222005|ta=76,c=17:VOLKSWAGEN_BRAKE_BOOSTER_P
+  - FC00.FE0076.222055|ta=76,c=17:VOLKSWAGEN_RADIATOR_FAN_DUTY
+  - FC00.FE0076.22276D|ta=76,c=17:VOLKSWAGEN_COOLANT_CIRC_PUMP_DUTY
+  - FC00.FE0076.22295A|ta=76,c=17:VOLKSWAGEN_ENG_ODO
+  - FC00.FE0076.2229D4|ta=76,c=17:VOLKSWAGEN_MOTOR_TRQ_REQ
+  - FC00.FE0076.223DEF|ta=76,c=17:VOLKSWAGEN_SOC
+  - FC00.FE0076.223DF8|ta=76,c=17:VOLKSWAGEN_MOTOR_RPM
+  - FC00.FE0076.2243B8|ta=76,c=17:VOLKSWAGEN_DCDC_T_COOL
+  - FC00.FE0076.224539|ta=76,c=17:VOLKSWAGEN_ACCEL
+  - FC00.FE0076.224675|ta=76,c=17:VOLKSWAGEN_HVBAT_V_TRAC
+  - FC00.FE0076.22F817|ta=76,c=17:VOLKSWAGEN_HVBAT_ODO
+  - FC00.FE007B.22028C|ta=7B,c=17:VOLKSWAGEN_SOC_DISP
+  - FC00.FE007B.2202BD|ta=7B,c=17:VOLKSWAGEN_BMS_ODO
+  - FC00.FE007B.221620|ta=7B,c=17:VOLKSWAGEN_HVBAT_PTC_I
+  - FC00.FE007B.221621|ta=7B,c=17:VOLKSWAGEN_HVBAT_PTC_V
+  - FC00.FE007B.221622|ta=7B,c=17:VOLKSWAGEN_HVBAT_ECU_T
+  - FC00.FE007B.221623|ta=7B,c=17:VOLKSWAGEN_HVBAT_PTC_T_1
+  - FC00.FE007B.221624|ta=7B,c=17:VOLKSWAGEN_HVBAT_PTC_T_2
+  - FC00.FE007B.22189B|ta=7B,c=17:VOLKSWAGEN_HVBAT_AFTER_CONTACTS_V
+  - FC00.FE007B.22189D|ta=7B,c=17:VOLKSWAGEN_HVBAT_T_IN,VOLKSWAGEN_HVBAT_T_OUT
+  - FC00.FE007B.221E0E|ta=7B,c=17:VOLKSWAGEN_HVBAT_T_MAX,VOLKSWAGEN_HVBAT_T_MAX_ID
+  - FC00.FE007B.221E0F|ta=7B,c=17:VOLKSWAGEN_HVBAT_T_MIN,VOLKSWAGEN_HVBAT_T_MIN_ID
+  - FC00.FE007B.221E1B|ta=7B,c=17:VOLKSWAGEN_HVBAT_I_LIM_CHG
+  - FC00.FE007B.221E1C|ta=7B,c=17:VOLKSWAGEN_HVBAT_I_LIM_DSCH
+  - FC00.FE007B.221E2C|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_SOC_MAX,VOLKSWAGEN_HVBAT_CELL_SOC_MAX_ID
+  - FC00.FE007B.221E2D|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_SOC_MIN,VOLKSWAGEN_HVBAT_CELL_SOC_MIN_ID
+  - FC00.FE007B.221E32|ta=7B,c=17:VOLKSWAGEN_HVBAT_CHRG_TOT_AH,VOLKSWAGEN_HVBAT_CHRG_TOT_KWH,VOLKSWAGEN_HVBAT_DSCH_TOT_AH,VOLKSWAGEN_HVBAT_DSCH_TOT_KWH
+  - FC00.FE007B.221E33|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_MAX,VOLKSWAGEN_HVBAT_CELL_V_MAX_ID
+  - FC00.FE007B.221E34|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_MIN,VOLKSWAGEN_HVBAT_CELL_V_MIN_ID
+  - FC00.FE007B.221E36|ta=7B,c=17:VOLKSWAGEN_HVBAT_V_BEFORE
+  - FC00.FE007B.221E38|ta=7B,c=17:VOLKSWAGEN_HVBAT_V_AFTER
+  - FC00.FE007B.221E39|ta=7B,c=17:VOLKSWAGEN_HVBAT_V_CHG
+  - FC00.FE007B.221E3B|ta=7B,c=17:VOLKSWAGEN_DC_BATTERY_V
+  - FC00.FE007B.221E3C|ta=7B,c=17:VOLKSWAGEN_HVBAT_V_CELLS_SUM
+  - FC00.FE007B.221E3D|ta=7B,c=17:VOLKSWAGEN_HVBAT_I_DC
+  - FC00.FE007B.221E3E|ta=7B,c=17:VOLKSWAGEN_HVBAT_I_DC_2
+  - FC00.FE007B.221E40|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_001
+  - FC00.FE007B.221E41|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_002
+  - FC00.FE007B.221E42|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_003
+  - FC00.FE007B.221E43|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_004
+  - FC00.FE007B.221E44|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_005
+  - FC00.FE007B.221E45|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_006
+  - FC00.FE007B.221E46|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_007
+  - FC00.FE007B.221E47|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_008
+  - FC00.FE007B.221E48|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_009
+  - FC00.FE007B.221E49|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_010
+  - FC00.FE007B.221E4A|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_011
+  - FC00.FE007B.221E4B|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_012
+  - FC00.FE007B.221E4C|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_013
+  - FC00.FE007B.221E4D|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_014
+  - FC00.FE007B.221E4E|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_015
+  - FC00.FE007B.221E4F|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_016
+  - FC00.FE007B.221E50|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_017
+  - FC00.FE007B.221E51|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_018
+  - FC00.FE007B.221E52|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_019
+  - FC00.FE007B.221E53|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_020
+  - FC00.FE007B.221E54|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_021
+  - FC00.FE007B.221E55|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_022
+  - FC00.FE007B.221E56|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_023
+  - FC00.FE007B.221E57|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_024
+  - FC00.FE007B.221E58|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_025
+  - FC00.FE007B.221E59|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_026
+  - FC00.FE007B.221E5A|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_027
+  - FC00.FE007B.221E5B|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_028
+  - FC00.FE007B.221E5C|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_029
+  - FC00.FE007B.221E5D|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_030
+  - FC00.FE007B.221E5E|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_031
+  - FC00.FE007B.221E5F|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_032
+  - FC00.FE007B.221E60|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_033
+  - FC00.FE007B.221E61|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_034
+  - FC00.FE007B.221E62|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_035
+  - FC00.FE007B.221E63|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_036
+  - FC00.FE007B.221E64|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_037
+  - FC00.FE007B.221E65|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_038
+  - FC00.FE007B.221E66|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_039
+  - FC00.FE007B.221E67|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_040
+  - FC00.FE007B.221E68|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_041
+  - FC00.FE007B.221E69|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_042
+  - FC00.FE007B.221E6A|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_043
+  - FC00.FE007B.221E6B|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_044
+  - FC00.FE007B.221E6C|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_045
+  - FC00.FE007B.221E6D|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_046
+  - FC00.FE007B.221E6E|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_047
+  - FC00.FE007B.221E6F|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_048
+  - FC00.FE007B.221E70|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_049
+  - FC00.FE007B.221E71|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_050
+  - FC00.FE007B.221E72|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_051
+  - FC00.FE007B.221E73|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_052
+  - FC00.FE007B.221E74|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_053
+  - FC00.FE007B.221E75|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_054
+  - FC00.FE007B.221E76|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_055
+  - FC00.FE007B.221E77|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_056
+  - FC00.FE007B.221E78|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_057
+  - FC00.FE007B.221E79|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_058
+  - FC00.FE007B.221E7A|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_059
+  - FC00.FE007B.221E7B|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_060
+  - FC00.FE007B.221E7C|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_061
+  - FC00.FE007B.221E7D|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_062
+  - FC00.FE007B.221E7E|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_063
+  - FC00.FE007B.221E7F|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_064
+  - FC00.FE007B.221E80|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_065
+  - FC00.FE007B.221E81|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_066
+  - FC00.FE007B.221E82|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_067
+  - FC00.FE007B.221E83|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_068
+  - FC00.FE007B.221E84|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_069
+  - FC00.FE007B.221E85|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_070
+  - FC00.FE007B.221E86|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_071
+  - FC00.FE007B.221E87|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_072
+  - FC00.FE007B.221E88|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_073
+  - FC00.FE007B.221E89|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_074
+  - FC00.FE007B.221E8A|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_075
+  - FC00.FE007B.221E8B|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_076
+  - FC00.FE007B.221E8C|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_077
+  - FC00.FE007B.221E8D|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_078
+  - FC00.FE007B.221E8E|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_079
+  - FC00.FE007B.221E8F|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_080
+  - FC00.FE007B.221E90|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_081
+  - FC00.FE007B.221E91|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_082
+  - FC00.FE007B.221E92|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_083
+  - FC00.FE007B.221E93|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_084
+  - FC00.FE007B.221E94|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_085
+  - FC00.FE007B.221E95|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_086
+  - FC00.FE007B.221E96|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_087
+  - FC00.FE007B.221E97|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_088
+  - FC00.FE007B.221E98|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_089
+  - FC00.FE007B.221E99|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_090
+  - FC00.FE007B.221E9A|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_091
+  - FC00.FE007B.221E9B|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_092
+  - FC00.FE007B.221E9C|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_093
+  - FC00.FE007B.221E9D|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_094
+  - FC00.FE007B.221E9E|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_095
+  - FC00.FE007B.221E9F|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_096
+  - FC00.FE007B.221EA0|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_097
+  - FC00.FE007B.221EA1|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_098
+  - FC00.FE007B.221EA2|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_099
+  - FC00.FE007B.221EA3|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_100
+  - FC00.FE007B.221EA4|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_101
+  - FC00.FE007B.221EA5|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_102
+  - FC00.FE007B.221EA6|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_103
+  - FC00.FE007B.221EA7|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_104
+  - FC00.FE007B.221EA8|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_105
+  - FC00.FE007B.221EA9|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_106
+  - FC00.FE007B.221EAA|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_107
+  - FC00.FE007B.221EAB|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_108
+  - FC00.FE007B.221EAE|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_1
+  - FC00.FE007B.221EAF|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_2
+  - FC00.FE007B.221EB0|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_3
+  - FC00.FE007B.221EB1|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_4
+  - FC00.FE007B.221EB2|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_5
+  - FC00.FE007B.221EB3|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_6
+  - FC00.FE007B.221EB4|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_7
+  - FC00.FE007B.221EB5|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_8
+  - FC00.FE007B.221EB6|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_9
+  - FC00.FE007B.221EB7|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_10
+  - FC00.FE007B.221EB8|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_11
+  - FC00.FE007B.221EB9|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_12
+  - FC00.FE007B.221EBA|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_13
+  - FC00.FE007B.221EBB|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_14
+  - FC00.FE007B.221EBC|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_15
+  - FC00.FE007B.221EBD|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_16
+  - FC00.FE007B.222A0B|ta=7B,c=17:VOLKSWAGEN_BATTERY_T
+  - FC00.FE007B.225170|ta=7B,c=17:VOLKSWAGEN_MINIMUM_DISCHARGE_V
+  - FC00.FE007B.225171|ta=7B,c=17:VOLKSWAGEN_MAXIMUM_CHARGE_V
+  - FC00.FE007B.225867|ta=7B,c=17:VOLKSWAGEN_ODO_2_V3
+  - FC00.FE007B.227425|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_17
+  - FC00.FE007B.227426|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_18
+  - FC00.FE007B.227427|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_19
+  - FC00.FE007B.227428|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_20
+  - FC00.FE007B.227429|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_21
+  - FC00.FE007B.22742A|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_22
+  - FC00.FE007B.22742B|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_23
+  - FC00.FE007B.22742C|ta=7B,c=17:VOLKSWAGEN_HVBAT_MOD_T_24
+  - FC00.FE007B.22743B|ta=7B,c=17:VOLKSWAGEN_CIRC_PUMP_FLOW
+  - FC00.FE007B.227448|ta=7B,c=17:VOLKSWAGEN_AC_CHARGING,VOLKSWAGEN_DRIVE_MODE,VOLKSWAGEN_RAPID_CHARGE_PORT
+  - FC00.FE007B.22F40C|ta=7B,c=17:VOLKSWAGEN_ELDRIVE_MOTOR_RPM
+  - FC00.FE007B.22F40D|ta=7B,c=17:VOLKSWAGEN_VSS
+  - FC00.FE007C.220308|ta=7C,c=17:VOLKSWAGEN_CALC_FROM_MEAS_IS
+  - FC00.FE007C.220805|ta=7C,c=17:VOLKSWAGEN_ELDRIVE_ECU_T_1
+  - FC00.FE007C.220806|ta=7C,c=17:VOLKSWAGEN_ELDRIVE_ECU_T_2
+  - FC00.FE007C.22086D|ta=7C,c=17:VOLKSWAGEN_ODO_V3
+  - FC00.FE007C.221007|ta=7C,c=17:VOLKSWAGEN_MOTOR_V_D_ACT
+  - FC00.FE007C.221008|ta=7C,c=17:VOLKSWAGEN_MOTOR_V_Q_ACT
+  - FC00.FE007C.221009|ta=7C,c=17:VOLKSWAGEN_MOTOR_V_D_CMD
+  - FC00.FE007C.22100A|ta=7C,c=17:VOLKSWAGEN_MOTOR_V_Q_CMD
+  - FC00.FE007C.221040|ta=7C,c=17:VOLKSWAGEN_INVERTER_PWR_LOSS_PHASE_U
+  - FC00.FE007C.221041|ta=7C,c=17:VOLKSWAGEN_INVERTER_PWR_LOSS_PHASE_V
+  - FC00.FE007C.221042|ta=7C,c=17:VOLKSWAGEN_INVERTER_PWR_LOSS_PHASE_W
+  - FC00.FE007C.222CCC|ta=7C,c=17:VOLKSWAGEN_ROTOR_T_MODEL
+  - FC00.FE007C.223E93|ta=7C,c=17:VOLKSWAGEN_DC_LINK_V
+  - FC00.FE007C.223E98|ta=7C,c=17:VOLKSWAGEN_DC_LINK_I
+  - FC00.FE007C.223EE7|ta=7C,c=17:VOLKSWAGEN_MOTOR_MAXIMUM_I
+  - FC00.FE007C.223EE8|ta=7C,c=17:VOLKSWAGEN_MOTOR_MINIMUM_I
+  - FC00.FE007C.223EE9|ta=7C,c=17:VOLKSWAGEN_ACTUAL_MECHANICAL_TORQUE_CALC
+  - FC00.FE007C.223EEA|ta=7C,c=17:VOLKSWAGEN_ACTUAL_POSSIBLE_MAXIMUM_TORQUE
+  - FC00.FE007C.223EEB|ta=7C,c=17:VOLKSWAGEN_ACTUAL_POSSIBLE_MINIMUM_TORQUE
+  - FC00.FE007C.223EED|ta=7C,c=17:VOLKSWAGEN_DESIRED_LINK_V
+  - FC00.FE007C.2240C8|ta=7C,c=17:VOLKSWAGEN_ELDRIVE_MOTOR_RAD_SEC
+  - FC00.FE007C.2243B9|ta=7C,c=17:VOLKSWAGEN_DC_LINK_V_RESERVE
+  - FC00.FE007C.224657|ta=7C,c=17:VOLKSWAGEN_ELDRIVE_MOTOR_FREQ
+  - FC00.FE007C.224672|ta=7C,c=17:VOLKSWAGEN_MOTOR_T
+  - FC00.FE007C.224FAE|ta=7C,c=17:VOLKSWAGEN_ELEC_DRIVE_INFLOW_COOLANT_T
+  - FC00.FE007C.2258E1|ta=7C,c=17:VOLKSWAGEN_ACTUAL_MECHANICAL_TORQUE_CMD_VALUE
+  - FC00.FE00B9.22465B|ta=B9,c=17:VOLKSWAGEN_DCDC_I_ALT
+  - FC00.FE00B9.22465D|ta=B9,c=17:VOLKSWAGEN_DC_DC_V
