--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -1,5 +1,7 @@
 model_year: 2021
 supported_commands_by_ecu:
+  "70E":
+  - 70E.778.221945|fc=1:VOLKSWAGEN_HEATER_FOR_NOZZLES_ACTIVE
   "710":
   - 710.222A0A:VOLKSWAGEN_ODO_2,VOLKSWAGEN_SSB_SENSOR_T
   - 710.77A.222A00|fc=1:VOLKSWAGEN_SSB_VT
@@ -11,8 +13,11 @@ supported_commands_by_ecu:
   - 710.77A.222A0F|fc=1:VOLKSWAGEN_USE_BAT_CHG
   - 710.77A.222A10|fc=1:VOLKSWAGEN_BAT_V_AT_REST
   - 710.77A.222A61|fc=1:VOLKSWAGEN_SSB_TOTAL_CHARGE,VOLKSWAGEN_SSB_TOTAL_DISCHARGE
+  "713":
+  - 713.77D.221810|fc=1:VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE
   "714":
   - 714.77E.221014|fc=1:VOLKSWAGEN_AAT,VOLKSWAGEN_DASH_AMBIENT_AIR_T
+  - 714.77E.22224B|fc=1:VOLKSWAGEN_DASH_OIL_THERMAL_WEAR
   "746":
   - 746.7B0.222603|fc=1:VOLKSWAGEN_CLIMATE_A_C_COMP_SPD
   - 746.7B0.222604|fc=1:VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD,VOLKSWAGEN_HVAC_AC_LOAD
@@ -23,6 +28,7 @@ supported_commands_by_ecu:
   - 746.7B0.22260A|fc=1:VOLKSWAGEN_AAT_CABIN
   - 746.7B0.22260C|fc=1:VOLKSWAGEN_CLIMATE_FR_L_DEFL_T
   - 746.7B0.22260D|fc=1:VOLKSWAGEN_CLIMATE_FR_R_DEFL_T
+  - 746.7B0.222611|fc=1:VOLKSWAGEN_CLIMATE_LEG_DEFL_T
   - 746.7B0.222612|fc=1:VOLKSWAGEN_CLIMATE_T_AFTER_EVAP,VOLKSWAGEN_HVAC_EVAP_T
   - 746.7B0.222613|fc=1:VOLKSWAGEN_CABIN_T,VOLKSWAGEN_HVAC_IAT
   - 746.7B0.22261E|fc=1:VOLKSWAGEN_RECIRC_FLAP_ACT_PCT,VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS
@@ -33,6 +39,7 @@ supported_commands_by_ecu:
   - 746.7B0.222626|fc=1:VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE
   - 746.7B0.2226ED|fc=1:VOLKSWAGEN_AIR_POLUTION,VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL
   "767":
+  - 767.7D1.220838|fc=1:VOLKSWAGEN_ECALL_SOC,VOLKSWAGEN_ECALL_STATUS
   - 767.7D1.222431|fc=1:VOLKSWAGEN_GPS_SATS_TRACKED,VOLKSWAGEN_GPS_SATS_VISIBLE
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
@@ -101,11 +108,98 @@ supported_commands_by_ecu:
   - 7E0.014F:MAX_EQ_RAT,MAX_MAP,MAX_O2_CURR,MAX_O2_VOLT
   - 7E0.0167:ECT_1,ECT_1_SUP,ECT_2,ECT_2_SUP
   - 7E0.0169:EGR_A_ACT,EGR_A_ACT_SUP,EGR_A_CMD,EGR_A_CMD_SUP,EGR_A_ERR,EGR_A_ERR_SUP,EGR_B_ACT,EGR_B_ACT_SUP,EGR_B_CMD,EGR_B_CMD_SUP,EGR_B_ERR,EGR_B_ERR_SUP
+  - 7E0.22100C|din=03:VOLKSWAGEN_FUEL_LVL
+  - 7E0.221044|din=03:VOLKSWAGEN_DPF_SFC_T
+  - 7E0.22105C|din=03:VOLKSWAGEN_GENERATOR_LOAD
+  - 7E0.22105E|din=03:VOLKSWAGEN_BAT_V_105E
+  - 7E0.2210F9|din=03:VOLKSWAGEN_DPF_OUTPUT_GAS_T
+  - 7E0.2211B2|din=03:VOLKSWAGEN_DPF_INPUT_GAS_T
   - 7E0.2211C4:VOLKSWAGEN_OIL_MAX
   - 7E0.2211C5:VOLKSWAGEN_OIL_MIN
+  - 7E0.22123C|din=03:VOLKSWAGEN_OIL_LAST_DYNAMIC_VALUE
+  - 7E0.22123F|din=03:VOLKSWAGEN_OIL_DYNAMIC_AVG
+  - 7E0.2214F5|din=03:VOLKSWAGEN_DIFF_P
+  - 7E0.221628|din=03:VOLKSWAGEN_INTERCOOLER_AIR_OUTPUT_T
+  - 7E0.22163B|din=03:VOLKSWAGEN_POSTINJ_2_QTY_SPEC
+  - 7E0.22163C|din=03:VOLKSWAGEN_POSTINJ_1_QTY_SPEC
+  - 7E0.22167D|din=03:VOLKSWAGEN_POSTINJ_3_QTY_SPEC
+  - 7E0.2216A9|din=03:VOLKSWAGEN_MILEAGE_
+  - 7E0.22F469|din=03:VOLKSWAGEN_VAR_1
+  - 7E0.7E8.22100D:VOLKSWAGEN_GEAR_ENG
+  - 7E0.7E8.221026:VOLKSWAGEN_AIR_MASS_ACT
+  - 7E0.7E8.22102E:VOLKSWAGEN_SNS_2
+  - 7E0.7E8.221047:VOLKSWAGEN_ENG_TRQ_1047
+  - 7E0.7E8.22104B:VOLKSWAGEN_A_C_COMP_TRQ
+  - 7E0.7E8.22104C:VOLKSWAGEN_AIR_MASS_SPEC
+  - 7E0.7E8.221057:VOLKSWAGEN_CHG_P
+  - 7E0.7E8.22106B:VOLKSWAGEN_TRQ
+  - 7E0.7E8.2210D0:VOLKSWAGEN_INJ_1_RAIL_P_CAL_PT_1_BIX
+  - 7E0.7E8.2210D1:VOLKSWAGEN_INJ_5_RAIL_P_CAL_1
+  - 7E0.7E8.2210D2:VOLKSWAGEN_INJ_4_RAIL_P_CAL_1
+  - 7E0.7E8.2210D3:VOLKSWAGEN_INJ_8_RAIL_P_CAL_1
+  - 7E0.7E8.2210D6:VOLKSWAGEN_INJ_1_RAIL_P_CAL_2
+  - 7E0.7E8.2210D7:VOLKSWAGEN_INJ_5_RAIL_P_CAL_2
+  - 7E0.7E8.2210D8:VOLKSWAGEN_INJ_4_RAIL_P_CAL_2
+  - 7E0.7E8.2210D9:VOLKSWAGEN_INJ_8_RAIL_P_CAL_2
+  - 7E0.7E8.2210DC:VOLKSWAGEN_INJ_1_RAIL_P_CAL_3
+  - 7E0.7E8.2210DD:VOLKSWAGEN_INJ_5_RAIL_P_CAL_3
+  - 7E0.7E8.2210DE:VOLKSWAGEN_INJ_4_RAIL_P_CAL_3
+  - 7E0.7E8.2210DF:VOLKSWAGEN_INJ_8_RAIL_P_CAL_3
+  - 7E0.7E8.2210E2:VOLKSWAGEN_KNOCK_RETARD_1
+  - 7E0.7E8.2210E3:VOLKSWAGEN_KNOCK_RETARD_5
+  - 7E0.7E8.2210E4:VOLKSWAGEN_KNOCK_RETARD_3
+  - 7E0.7E8.2210E5:VOLKSWAGEN_KNOCK_RETARD_6
+  - 7E0.7E8.2210E6:VOLKSWAGEN_KNOCK_RETARD_2
+  - 7E0.7E8.2210F1:VOLKSWAGEN_OFFSET_FOR_DIFF_P
+  - 7E0.7E8.2210FF:VOLKSWAGEN_INJ_QUANTITY_DEVIATION_CYLINDER_1
+  - 7E0.7E8.221100:VOLKSWAGEN_INJ_QUANTITY_DEVIATION_CYLINDER_4
+  - 7E0.7E8.221104:VOLKSWAGEN_INJ_QUANTITY_DEVIATION_CYLINDER_3
+  - 7E0.7E8.221105:VOLKSWAGEN_INJ_QUANTITY_DEVIATION_CYLINDER_6
+  - 7E0.7E8.221111:VOLKSWAGEN_CMD
+  - 7E0.7E8.221116:VOLKSWAGEN_COOLANT_FAN_1_DUTY
+  - 7E0.7E8.22111A:VOLKSWAGEN_INSTANT_FUEL_FLOW
+  - 7E0.7E8.22111F:VOLKSWAGEN_PREHEAT_TIME
+  - 7E0.7E8.22112C:VOLKSWAGEN_ACT
+  - 7E0.7E8.221131:VOLKSWAGEN_ACT_START
+  - 7E0.7E8.221139:VOLKSWAGEN_MEAN_INJ_QUANTITY
+  - 7E0.7E8.221148:VOLKSWAGEN_FUEL_METERING_VALVE
+  - 7E0.7E8.221149:VOLKSWAGEN_CHG_AIR_P_SPEC
+  - 7E0.7E8.22114C:VOLKSWAGEN_MISFIRE_PER_1K_REV_4
   - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1,VOLKSWAGEN_MISFIRE_3
   - 7E0.7E8.221153:VOLKSWAGEN_EM_TORQ_1,VOLKSWAGEN_MISFIRE_2
+  - 7E0.7E8.22115C:VOLKSWAGEN_STATUS
+  - 7E0.7E8.221169:VOLKSWAGEN_FUEL_HIGH_P_ACT
+  - 7E0.7E8.22116A:VOLKSWAGEN_FUEL_HIGH_P_SPEC
+  - 7E0.7E8.221187:VOLKSWAGEN_ACCELERATION
+  - 7E0.7E8.2211A6:VOLKSWAGEN_ACCEL_PDL
+  - 7E0.7E8.2211BC:VOLKSWAGEN_ENG_OIL_LVL
   - 7E0.7E8.2211BE:VOLKSWAGEN_EOT_V2,VOLKSWAGEN_EOT_V3
+  - 7E0.7E8.2211BF:VOLKSWAGEN_FUEL_P_REGULATOR
+  - 7E0.7E8.2211C8:VOLKSWAGEN_FUEL_LOW_P_ACT
+  - 7E0.7E8.2211CC:VOLKSWAGEN_BOOST_REGULATOR_FEEDBACK
+  - 7E0.7E8.2211F1:VOLKSWAGEN_TRANSMISSION_INPUT_SHAFT_SPD
+  - 7E0.7E8.2211F2:VOLKSWAGEN_MAIN_INJ_START
+  - 7E0.7E8.2211F3:VOLKSWAGEN_POSTINJ_2_START
+  - 7E0.7E8.2211F4:VOLKSWAGEN_POSTINJ_1_START
+  - 7E0.7E8.22121E:VOLKSWAGEN_SPEC_VALUE_RAIL_P
+  - 7E0.7E8.22121F:VOLKSWAGEN_HIGH_FUEL_P_CONTROL_DEVIATION
+  - 7E0.7E8.221221:VOLKSWAGEN_SNS_1
+  - 7E0.7E8.2212FE:VOLKSWAGEN_CAM_ADAPT_INT_BNK_1_PHASE_POS_12FE
+  - 7E0.7E8.221301:VOLKSWAGEN_SMOKE
+  - 7E0.7E8.22133B:VOLKSWAGEN_CAM_SPD
+  - 7E0.7E8.221354:VOLKSWAGEN_SOOT_INDEX
+  - 7E0.7E8.2214C7:VOLKSWAGEN_PREINJ_1_START
+  - 7E0.7E8.2214C8:VOLKSWAGEN_PREINJ_2_START
+  - 7E0.7E8.2214CC:VOLKSWAGEN_POSTINJ_1_DUR
+  - 7E0.7E8.2214CD:VOLKSWAGEN_POSTINJ_2_DUR
+  - 7E0.7E8.2214CE:VOLKSWAGEN_ACT_DURATION
+  - 7E0.7E8.2214CF:VOLKSWAGEN_MAIN_INJ_DUR
+  - 7E0.7E8.2214D0:VOLKSWAGEN_PREINJ_1_DUR
+  - 7E0.7E8.2214D1:VOLKSWAGEN_PREINJ_2_DUR
+  - 7E0.7E8.221626:VOLKSWAGEN_RAD_COOLANT_T_ACT
+  - 7E0.7E8.22162D:VOLKSWAGEN_FUEL_T_162D
+  - 7E0.7E8.22179C:VOLKSWAGEN_ENG_OIL_T_2
+  - 7E0.7E8.2218D0:VOLKSWAGEN_BRK_P
   - 7E0.7E8.22F40D:VOLKSWAGEN_VSS_V2
   - 7E0.7E8.22F41F:VOLKSWAGEN_RUNTM
   - 7E0.7E8.22F421:VOLKSWAGEN_MIL_DIST
@@ -126,6 +220,7 @@ supported_commands_by_ecu:
   - 7E1.7E9.0141
   - 7E1.7E9.221001:VOLKSWAGEN_TIRE_FR_SPD_V2
   - 7E1.7E9.221004:VOLKSWAGEN_TIRE_RL_SPD_V2
+  - 7E1.7E9.2210B0|fc=1:VOLKSWAGEN_110_C_TIME,VOLKSWAGEN_65_C_TIME,VOLKSWAGEN_80_C_TIME,VOLKSWAGEN_ANLYS_40_ATF_T_110_135C_TIME,VOLKSWAGEN_ANLYS_40_ATF_T_OVER_135C_TIME
   - 7E1.7E9.222104|fc=1:VOLKSWAGEN_ATF_T
   - 7E1.7E9.223841|fc=1:VOLKSWAGEN_ODO_3841,VOLKSWAGEN_ODO_TCM_1
 unsupported_commands_by_ecu:
@@ -134,8 +229,25 @@ unsupported_commands_by_ecu:
   - 70B.2218A1|fc=1:VOLKSWAGEN_TID_2,VOLKSWAGEN_TPOS_2,VOLKSWAGEN_TPS_2,VOLKSWAGEN_TPW_2,VOLKSWAGEN_TP_2,VOLKSWAGEN_TP_FL,VOLKSWAGEN_TT_2
   - 70B.2218A2|fc=1:VOLKSWAGEN_TID_3,VOLKSWAGEN_TPOS_3,VOLKSWAGEN_TPS_3,VOLKSWAGEN_TPW_3,VOLKSWAGEN_TP_3,VOLKSWAGEN_TP_RL,VOLKSWAGEN_TT_3
   - 70B.2218A3|fc=1:VOLKSWAGEN_TID_4,VOLKSWAGEN_TPOS_4,VOLKSWAGEN_TPS_4,VOLKSWAGEN_TPW_4,VOLKSWAGEN_TP_4,VOLKSWAGEN_TP_RR,VOLKSWAGEN_TT_4
+  "70F":
+  - 70F.779.2208A7|fc=1:VOLKSWAGEN_4WD_HALDEX_DIFF_LOCK_UP
+  - 70F.779.220C0A|fc=1:VOLKSWAGEN_4WD_HALDEX_MODE
+  - 70F.779.222B1B|fc=1:VOLKSWAGEN_4WD_FR_L_WHEEL_SPD
+  - 70F.779.222B1C|fc=1:VOLKSWAGEN_4WD_FR_R_WHEEL_SPD
+  - 70F.779.222B1D|fc=1:VOLKSWAGEN_4WD_RR_L_WHEEL_SPD
+  - 70F.779.222B1E|fc=1:VOLKSWAGEN_4WD_RR_R_WHEEL_SPD
+  - 70F.779.222BE4|fc=1:VOLKSWAGEN_4WD_HALDEX_FRICTION_DISC_T
+  - 70F.779.222BE6|fc=1:VOLKSWAGEN_4WD_HALDEX_I
+  - 70F.779.222BE7|fc=1:VOLKSWAGEN_4WD_HALDEX_PWM
+  - 70F.779.222BE9|fc=1:VOLKSWAGEN_4WD_HALDEX_V
+  - 70F.779.222BF0|fc=1:VOLKSWAGEN_4WD_HALDEX_FR_RR_SPD_DIFFERENCE
+  - 70F.779.222BF1|fc=1:VOLKSWAGEN_4WD_HALDEX_T
+  - 70F.779.222BF3|fc=1:VOLKSWAGEN_4WD_HALDEX_DUTY
   "710":
   - 710.77A.2215D1|fc=1:VOLKSWAGEN_HV_EM_HVBAT_ENERGY_INFORMATION,VOLKSWAGEN_HV_EM_NV_PWR_LIMITATION,VOLKSWAGEN_HV_EM_PWR_LIMITATION,VOLKSWAGEN_NV_ENERGY_REQUIREMENT
+  - 710.77A.222A08|fc=1:VOLKSWAGEN_BAT_I_FILT
+  - 710.77A.222A0D|fc=1:VOLKSWAGEN_BAT_COND_FOR_DISP
+  - 710.77A.222A1D|fc=1:VOLKSWAGEN_BAT_ACID_STRAT
   - 710.77A.222A53|fc=1:VOLKSWAGEN_DCDC_I,VOLKSWAGEN_DCDC_I_RSV,VOLKSWAGEN_DCDC_V_LOW
   - 710.77A.222AB2|fc=1:VOLKSWAGEN_HVBAT_CAP,VOLKSWAGEN_HVBAT_E_MAX
   - 710.77A.222AB4|fc=1:VOLKSWAGEN_HVBAT_CSMP_AVG_INT,VOLKSWAGEN_RANGE_RESERVE_EST
@@ -145,10 +257,17 @@ unsupported_commands_by_ecu:
   - 710.77A.222AB8|fc=1:VOLKSWAGEN_HVBAT_KWH
   - 710.77A.222AF7|fc=1:VOLKSWAGEN_AUX_BAT_AGE_CAP,VOLKSWAGEN_AUX_BAT_AGE_POW,VOLKSWAGEN_AUX_BAT_C,VOLKSWAGEN_AUX_BAT_CAP,VOLKSWAGEN_AUX_BAT_CHRG_TOT,VOLKSWAGEN_AUX_BAT_DSCH_TOT,VOLKSWAGEN_AUX_BAT_SOC,VOLKSWAGEN_AUX_BAT_T,VOLKSWAGEN_AUX_BAT_T_S,VOLKSWAGEN_AUX_BAT_V
   "713":
+  - 713.77D.2203E8|fc=1:VOLKSWAGEN_FL_VSS,VOLKSWAGEN_FR_VSS,VOLKSWAGEN_RL_VSS,VOLKSWAGEN_RR_VSS
   - 713.77D.221800|fc=1:VOLKSWAGEN_FL_VSS_V2,VOLKSWAGEN_FL_VSS_V2
   - 713.77D.221801|fc=1:VOLKSWAGEN_FR_VSS_V2,VOLKSWAGEN_FR_VSS_V2
   - 713.77D.221802|fc=1:VOLKSWAGEN_RL_VSS_V2,VOLKSWAGEN_RL_VSS_V2
   - 713.77D.221803|fc=1:VOLKSWAGEN_RR_VSS_V2,VOLKSWAGEN_RR_VSS_V2
+  - 713.77D.221808|fc=1:VOLKSWAGEN_HDC_ACTIVE,VOLKSWAGEN_HDC_INCLINE
+  - 713.77D.22180C|fc=1:VOLKSWAGEN_EDL_ACTIVE,VOLKSWAGEN_EDL_FR_L_BRAKE_T,VOLKSWAGEN_EDL_FR_R_BRAKE_T,VOLKSWAGEN_EDL_RR_L_BRAKE_T,VOLKSWAGEN_EDL_RR_R_BRAKE_T
+  - 713.77D.22180E|fc=1:VOLKSWAGEN_BDD_ACTIVE,VOLKSWAGEN_BDD_ODO
+  - 713.77D.221816|fc=1:VOLKSWAGEN_AIR_GAB_VACUUM_SNS,VOLKSWAGEN_BRAKE_P_SNS
+  - 713.77D.221821|fc=1:VOLKSWAGEN_TPMS_AVAIL,VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND,VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND,VOLKSWAGEN_TPMS_FR_R_FLAT_TIRE_IND,VOLKSWAGEN_TPMS_FR_R_TIRE_P_DIFF_IND,VOLKSWAGEN_TPMS_ODO_RDG_AT_FOURTH_TO_LAST_WARN,VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_ADAPT,VOLKSWAGEN_TPMS_ODO_RDG_AT_LAST_WARN,VOLKSWAGEN_TPMS_ODO_RDG_AT_NEXT_TO_LAST_WARN,VOLKSWAGEN_TPMS_ODO_RDG_AT_THIRD_TO_LAST_WARN,VOLKSWAGEN_TPMS_ODO_RDG_FOUR_ADAPTATIONS_AGO,VOLKSWAGEN_TPMS_ODO_RDG_THREE_ADAPTATIONS_AGO,VOLKSWAGEN_TPMS_ODO_RDG_TWO_ADAPTATIONS_AGO,VOLKSWAGEN_TPMS_RR_L_FLAT_TIRE_IND,VOLKSWAGEN_TPMS_RR_L_TIRE_P_DIFF_IND,VOLKSWAGEN_TPMS_RR_R_FLAT_TIRE_IND,VOLKSWAGEN_TPMS_RR_R_TIRE_P_DIFF_IND
+  - 713.77D.2218B6|fc=1:VOLKSWAGEN_CNT_STEER_SUPPORT_ACTIVE,VOLKSWAGEN_CNT_STEER_SUPPORT_ODO_RDG_OF_LAST_ACT,VOLKSWAGEN_CNT_STEER_SUPPORT_STEERING_TRQ
   - 713.77D.222B1B:VOLKSWAGEN_TIRE_FL_SPD_V3
   - 713.77D.222B1C:VOLKSWAGEN_TIRE_FR_SPD_V3
   - 713.77D.222B1D:VOLKSWAGEN_TIRE_RL_SPD_V3
@@ -165,6 +284,7 @@ unsupported_commands_by_ecu:
   - 714.77E.220530|fc=1:VOLKSWAGEN_TRIP_USE_SHORT
   - 714.77E.221870|fc=1:VOLKSWAGEN_DASH_DRIVE_MODE
   - 714.77E.2219D2|fc=1:VOLKSWAGEN_DASH_NORMAL_KM,VOLKSWAGEN_DASH_RANGE_KM
+  - 714.77E.222299|fc=1:VOLKSWAGEN_DASH_AVG_FUEL_CONS
   - 714.77E.2222E0:VOLKSWAGEN_RANGE_DSP
   "715":
   - 715.222353:VOLKSWAGEN_CRASH_FRONT,VOLKSWAGEN_CRSH_FRONT
@@ -208,28 +328,95 @@ unsupported_commands_by_ecu:
   - 746.7B0.220800|fc=1:VOLKSWAGEN_AC_COMPRESSOR_PWR_ACT
   - 746.7B0.22263D|fc=1:VOLKSWAGEN_CLIMATE_RR_DEFL_T
   - 746.7B0.2227C3|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_HUM
+  - 746.7B0.2227D6|fc=1:VOLKSWAGEN_CLIMATE_A_C_COMP_POWER_CONS
   - 746.7B0.2242DB|fc=1:VOLKSWAGEN_CO2_CONTENT_INTERIOR
+  - 746.7B0.22482B|fc=1:VOLKSWAGEN_CLIMATE_A_C_CLCH
   - 746.7B0.224EEF|fc=1:VOLKSWAGEN_AC_REFRIG_P_SENS1,VOLKSWAGEN_AC_REFRIG_T_SENS1,VOLKSWAGEN_AC_REFRIG_T_SENS1_INT
   - 746.7B0.22F449|fc=1:VOLKSWAGEN_APP_D
+  "74F":
+  - 74F.7B9.22F41B|fc=1:VOLKSWAGEN_ASSIST_DIST_TO_DET_PED
+  "752":
+  - 752.7BC.220005|fc=1:VOLKSWAGEN_L,VOLKSWAGEN_R
   "7E0":
+  - 7E0.22114E|din=03:VOLKSWAGEN_SOOT_MASS_MEASURED
+  - 7E0.22114F|din=03:VOLKSWAGEN_SOOT_MASS_CALCULATED
   - 7E0.221156|din=03:VOLKSWAGEN_DIST_SINCE_LAST_REGEN_,VOLKSWAGEN_HVBAT_SOC
+  - 7E0.22115E|din=03:VOLKSWAGEN_TIME_SINCE_LAST_REGEN
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
+  - 7E0.2211F6|din=03:VOLKSWAGEN_FIELD_LIMIT
+  - 7E0.2212CB|din=03:VOLKSWAGEN_SERVICE_LIMIT
+  - 7E0.221314|din=03:VOLKSWAGEN_
+  - 7E0.221347|din=03:VOLKSWAGEN_REGEN_DUR
+  - 7E0.22178C|din=03:VOLKSWAGEN_OIL_ASH_RESIDUE
   - 7E0.22295A:VOLKSWAGEN_ODO_2_V2,VOLKSWAGEN_ODO_V2
+  - 7E0.22F42C|din=03:VOLKSWAGEN_VAR_2
   - 7E0.7E8.22028D:VOLKSWAGEN_ECU_TEMP
   - 7E0.7E8.2208D2:VOLKSWAGEN_HVBAT_SOC_DISP_V2
   - 7E0.7E8.221002:VOLKSWAGEN_AC_COMP_T
   - 7E0.7E8.221004:VOLKSWAGEN_AAT_V3
+  - 7E0.7E8.221007:VOLKSWAGEN_SOP
+  - 7E0.7E8.221010:VOLKSWAGEN_ENG_TRQ_1010
+  - 7E0.7E8.2210D4:VOLKSWAGEN_INJ_6_RAIL_P_CAL_1
+  - 7E0.7E8.2210D5:VOLKSWAGEN_INJ_5_RAIL_P_CAL_1_2
+  - 7E0.7E8.2210DA:VOLKSWAGEN_INJ_6_RAIL_P_CAL_2
+  - 7E0.7E8.2210DB:VOLKSWAGEN_INJ_3_RAIL_P_CAL_2
   - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_10E0,VOLKSWAGEN_ODO_V3
+  - 7E0.7E8.2210E1:VOLKSWAGEN_INJ_3_RAIL_P_CAL_PT_3_10E1
+  - 7E0.7E8.2210E7:VOLKSWAGEN_KNOCK_RETARD_4
+  - 7E0.7E8.221106:VOLKSWAGEN_INJ_QUANTITY_DEVIATION_CYLINDER_2
+  - 7E0.7E8.221107:VOLKSWAGEN_INJ_QUANTITY_DEVIATION_CYLINDER_5
+  - 7E0.7E8.221114:VOLKSWAGEN_COOLANT_FAN_2_DUTY
+  - 7E0.7E8.221125:VOLKSWAGEN_CAM_ADAPT_INT_BNK_1_PHASE_POS_1125
+  - 7E0.7E8.221128:VOLKSWAGEN_CAM_ADAPT_EXH_BNK_1_PHASE_POS
+  - 7E0.7E8.22113F:VOLKSWAGEN_FUEL_CONS
+  - 7E0.7E8.221146:VOLKSWAGEN_MISFIRE_TOT
+  - 7E0.7E8.221147:VOLKSWAGEN_MISFIRE_PER_1K_REV_1
+  - 7E0.7E8.22114A:VOLKSWAGEN_MISFIRE_PER_1K_REV_6
+  - 7E0.7E8.22114B:VOLKSWAGEN_MISFIRE_PER_1K_REV_2
+  - 7E0.7E8.221150:VOLKSWAGEN_MISFIRE_5
   - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2,VOLKSWAGEN_MISFIRE_6
   - 7E0.7E8.221154:VOLKSWAGEN_EM_TORQ_2,VOLKSWAGEN_MISFIRE_4
   - 7E0.7E8.221155:VOLKSWAGEN_EM_TORQ_3
   - 7E0.7E8.221158:VOLKSWAGEN_MAX_DCHA_CUR_2
   - 7E0.7E8.221159:VOLKSWAGEN_MAX_CHA_CUR_2
+  - 7E0.7E8.22115A:VOLKSWAGEN_FUEL_CONS_SINCE_LAST_REGEN
   - 7E0.7E8.22115B:VOLKSWAGEN_FIELD_REGEN_REQUEST_STATUS,VOLKSWAGEN_VSS_DIR
   - 7E0.7E8.221160:VOLKSWAGEN_ODO_HD
   - 7E0.7E8.221164:VOLKSWAGEN_HVBAT_SOC_DISP,VOLKSWAGEN_I_DURATION
   - 7E0.7E8.2211BB:VOLKSWAGEN_OIL_CRIT,VOLKSWAGEN_OIL_LVL_WARN_THRESHOLD_11BB
   - 7E0.7E8.2211BD:VOLKSWAGEN_EOT_V2,VOLKSWAGEN_OIL_LEVEL_WARN
+  - 7E0.7E8.2211C1:VOLKSWAGEN_FIELD_REGEN_LOCK_STATUS
+  - 7E0.7E8.2211CE:VOLKSWAGEN_FUEL_LOW_P_SPEC
+  - 7E0.7E8.22128A:VOLKSWAGEN_FUEL_T_128A
+  - 7E0.7E8.22128C:VOLKSWAGEN_MEDIAN_INJ_TIMING
+  - 7E0.7E8.2212FC:VOLKSWAGEN_THRTL_VLV_ADPT_ACT
+  - 7E0.7E8.221341:VOLKSWAGEN_END_OF_PHASE_WINDOW
+  - 7E0.7E8.221356:VOLKSWAGEN_CHG_LIMIT_OVER_CHG
+  - 7E0.7E8.221434:VOLKSWAGEN_DPF_TIME_SINCE_REGEN_1
+  - 7E0.7E8.22145D:VOLKSWAGEN_DPF_SOOT_MASS_MEAS_BNK_2
+  - 7E0.7E8.22145E:VOLKSWAGEN_DPF_SOOT_MASS_CALC_BNK_2
+  - 7E0.7E8.22145F:VOLKSWAGEN_DPF_OIL_ASH_VOL_BNK_2
+  - 7E0.7E8.221460:VOLKSWAGEN_DPF_DIST_SINCE_REGEN_BNK_2
+  - 7E0.7E8.221461:VOLKSWAGEN_DPF_FUEL_CONS_SINCE_REGEN_BNK_2
+  - 7E0.7E8.221464:VOLKSWAGEN_DPF_TIME_SINCE_REGEN_2
+  - 7E0.7E8.22146D:VOLKSWAGEN_INJ_7_RAIL_P_CAL_PT_1
+  - 7E0.7E8.22146E:VOLKSWAGEN_INJ_2_RAIL_P_CAL_PT_1_146E
+  - 7E0.7E8.221473:VOLKSWAGEN_INJ_7_RAIL_P_CAL_PT_2
+  - 7E0.7E8.221474:VOLKSWAGEN_INJ_2_RAIL_P_CAL_PT_2_1474
+  - 7E0.7E8.221479:VOLKSWAGEN_INJ_7_RAIL_P_CAL_PT_3
+  - 7E0.7E8.22147A:VOLKSWAGEN_INJ_2_RAIL_P_CAL_PT_3_147A
+  - 7E0.7E8.2214B4:VOLKSWAGEN_FUEL_LVL_14B4
+  - 7E0.7E8.2214B6:VOLKSWAGEN_DPF_FUEL_CONS_SINCE_REGEN_BNK_1
+  - 7E0.7E8.2214B8:VOLKSWAGEN_DPF_DIST_SINCE_REGEN_BNK_1
+  - 7E0.7E8.2214B9:VOLKSWAGEN_DPF_OIL_ASH_VOL_BNK_1
+  - 7E0.7E8.2214BA:VOLKSWAGEN_DPF_SOOT_MASS_CALC_BNK_1
+  - 7E0.7E8.2214BB:VOLKSWAGEN_DPF_SOOT_MASS_MEAS_BNK_1
+  - 7E0.7E8.2214BE:VOLKSWAGEN_EXHAUST_GAS_T_SNS_3
+  - 7E0.7E8.22156F:VOLKSWAGEN_EXH_GAS_T_SNS_3_BNK_2
+  - 7E0.7E8.22166B:VOLKSWAGEN_DPF_DIFF_P_RAW_BNK_1
+  - 7E0.7E8.22166C:VOLKSWAGEN_DPF_DIFF_P_RAW_BNK_2
+  - 7E0.7E8.22166F:VOLKSWAGEN_EXHAUST_GAS_T_SNS_1
+  - 7E0.7E8.221670:VOLKSWAGEN_EXH_GAS_T_SNS_1_BNK_2
   - 7E0.7E8.222005:VOLKSWAGEN_BRAKE_BST_P
   - 7E0.7E8.222061:VOLKSWAGEN_APP_POS1
   - 7E0.7E8.222062:VOLKSWAGEN_APP_POS2
@@ -252,6 +439,7 @@ unsupported_commands_by_ecu:
   - 7E1.7E9.220805:VOLKSWAGEN_BRAKE_LIGHT_ON,VOLKSWAGEN_BRAKE_LIGHT_ON_VALID,VOLKSWAGEN_BRAKE_PRESSED,VOLKSWAGEN_BRAKE_PRESSED_VALID
   - 7E1.7E9.221002:VOLKSWAGEN_TIRE_FL_SPD_V2
   - 7E1.7E9.221003:VOLKSWAGEN_TIRE_RR_SPD_V2
+  - 7E1.7E9.2210AF|fc=1:VOLKSWAGEN_ANALYSIS_39_DRV_RECORDER_TOT_TIME
   - 7E1.7E9.22210F:VOLKSWAGEN_GEAR,VOLKSWAGEN_GEAR_SHFT
   "7E5":
   - 7E5.221802|din=03:VOLKSWAGEN_BMS_I
