--- a/tests/test_cases/2021/commands/746.7B0.222607|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.222607|fc=1.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY: 0
   response: 7B00462260700
 - expected_values:
+    VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY: 24
+  response: 7B0046226073C
+- expected_values:
     VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY: 26
   response: 7B00462260741
 - expected_values:
