--- a/tests/test_cases/2021/commands/710.77A.222A10|fc=1.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A10|fc=1.yaml
@@ -19,5 +19,8 @@ test_cases:
     VOLKSWAGEN_BAT_V_AT_REST: 16.41176
   response: 77A04622A1023
 - expected_values:
+    VOLKSWAGEN_BAT_V_AT_REST: 16.62353
+  response: 77A04622A1024
+- expected_values:
     VOLKSWAGEN_BAT_V_AT_REST: 21.70588
   response: 77A04622A103C
