--- a/tests/test_cases/2021/commands/7E0.7E8.2211CC.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2211CC.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_BOOST_REGULATOR_FEEDBACK: 66.55
   response: 7E8056211CC19FF
 - expected_values:
+    VOLKSWAGEN_BOOST_REGULATOR_FEEDBACK: 74.24
+  response: 7E8056211CC1D00
+- expected_values:
     VOLKSWAGEN_BOOST_REGULATOR_FEEDBACK: 81.92
   response: 7E8056211CC2000
