--- a/tests/test_cases/2021/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2021/commands/714.77E.22224B|fc=1.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 134
   response: 77E0562224B0086
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 135
+  response: 77E0562224B0087
