--- a/tests/test_cases/2021/commands/746.7B0.222607|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.222607|fc=1.yaml
@@ -19,5 +19,8 @@ test_cases:
     VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY: 27.2
   response: 7B00462260744
 - expected_values:
+    VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY: 33.6
+  response: 7B00462260754
+- expected_values:
     VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY: 42.4
   response: 7B0046226076A
