--- a/tests/test_cases/2021/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2021/commands/714.77E.22224B|fc=1.yaml
@@ -18,3 +18,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 137
   response: 77E0562224B0089
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 138
+  response: 77E0562224B008A
