--- a/tests/test_cases/2021/commands/746.7B0.2226ED|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.2226ED|fc=1.yaml
@@ -25,6 +25,10 @@ test_cases:
     VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0.5
   response: 7B0046226ED05
 - expected_values:
+    VOLKSWAGEN_AIR_POLUTION: 1
+    VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 1
+  response: 7B0046226ED0A
+- expected_values:
     VOLKSWAGEN_AIR_POLUTION: 1.4
     VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 1.4
   response: 7B0046226ED0E
