--- a/tests/test_cases/2021/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2021/commands/714.77E.22224B|fc=1.yaml
@@ -24,3 +24,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 139
   response: 77E0562224B008B
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 140
+  response: 77E0562224B008C
