--- a/tests/test_cases/2021/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2021/commands/714.77E.22224B|fc=1.yaml
@@ -27,3 +27,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 140
   response: 77E0562224B008C
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 141
+  response: 77E0562224B008D
