--- a/tests/test_cases/2021/commands/7E0.7E8.2210D0.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210D0.yaml
@@ -7,6 +7,9 @@ test_cases:
     VOLKSWAGEN_PQ35_INJ_1_RAIL_P_1: 0.0484
   response: 7E8056210D003C8
 - expected_values:
+    VOLKSWAGEN_PQ35_INJ_1_RAIL_P_1: 0.0488
+  response: 7E8056210D003D0
+- expected_values:
     VOLKSWAGEN_PQ35_INJ_1_RAIL_P_1: 0.0492
   response: 7E8056210D003D8
 - expected_values:
