--- a/tests/test_cases/2021/commands/7E0.7E8.2210D1.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210D1.yaml
@@ -10,5 +10,8 @@ test_cases:
     VOLKSWAGEN_PQ35_INJ_3_RAIL_P_1: 0.0396
   response: 7E8056210D10318
 - expected_values:
+    VOLKSWAGEN_PQ35_INJ_3_RAIL_P_1: 0.0404
+  response: 7E8056210D10328
+- expected_values:
     VOLKSWAGEN_PQ35_INJ_3_RAIL_P_1: 0.0408
   response: 7E8056210D10330
