--- a/tests/test_cases/2021/commands/7E0.7E8.221024.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221024.yaml
@@ -7,5 +7,5 @@ test_cases:
     VOLKSWAGEN_MQB_AIR_MASS_1: 76.3
   response: 7E80562102402FB
 - expected_values:
-    VOLKSWAGEN_MQB_AIR_MASS_1: 190.8
-  response: '7E8056210240774'
+    VOLKSWAGEN_MQB_AIR_MASS_1: 263.9
+  response: 7E8056210240A4F
