--- a/tests/test_cases/2021/commands/7E1.7E9.223816.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223816.yaml
@@ -21,3 +21,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_I_GEAR_DQ200: 5
   response: '7E90462381607'
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_I_GEAR_DQ200: 6
+  response: '7E90462381608'
