--- a/tests/test_cases/2021/commands/7E1.7E9.223803.yaml
+++ b/tests/test_cases/2021/commands/7E1.7E9.223803.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_TCM_BRAKE_P: -0.3
   response: 7E905623803E2FF
+- expected_values:
+    VOLKSWAGEN_MQB_TCM_BRAKE_P: 5.1
+  response: 7E905623803FE01
